# Team_02.2-Session03

./: .env  .env.example  01_create_project.py  01b_create_model.py  02_fetch_model.py  03_add_properties.py  04_modify_geometry.py  5-exportJSON-GQL2.py  6-subscription.py  7autobackup.py  8autobacknewversion.py  backup_20260217_085421_c4c72a1b43.json  backup_20260217_085947_054a32dd5d.json  backup_20260217_090221_cdc1d19953.json  model_objects.json  object_data last one .json  pyproject.toml
