[project]
name = "tower-teachers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "specklepy>=3.2.3",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "gql>=3.5.3",
]

[tool.uv.workspace]
members = [
    "03-specklepy",
]
